<resources>
    <string name="app_name">BikeLock</string>
    <string name="Get">GET</string>
    <string name="empty"></string>
    <string name="protocol">用户协议:</string>
    <string name="protocol_content">的描述更是鲁莽灭裂，放肆亵渎，竟然将这段历史涂抹得狰狞可怖面目全非。这种荒诞的史观，非但是官方正统意识形态的形象化，而且流布民间，形成了中国民众源远流长的“暴秦”口碑。事实上，对于酷爱说古道今的中国老百姓而言，话本小说、评书戏剧、民间传说等对民众意识所起到的浸润奠基作用，远远大于晦涩难懂的史书。两千年来，在对秦帝国的描绘评判中，旧的正统形态与旧的民间艺术异曲同工，或刻意贬损，或肆意涂抹，悠悠岁月中竟是众口铄金，中国文明正源的万丈光焰竟然离奇得变形了。
这是中国历史的悲剧，也是中国文明的悲剧——一个富有正义感与历史感的民族，竟将奠定自己文明根基的伟大帝国硬生生划入异类而生猛挞伐！
悲剧的深远阴影正在随着历史的进步而渐渐淡化，儒家式的恶毒咒骂也已经大体终止了。但是，国人乃至世界对秦帝国的了解，还依然朦胧混沌。尽管万里长城、兵马俑、郡县制、度量衡以至我们每日使用的方块字（请注意，人们叫它“汉字”），都实实在在地矗立在那里，人们观念的分裂却依旧如斯。
秦为何物？老百姓还是不甚了了。即或在知识阶层，能够大体说叨秦帝国来龙去脉与基本功绩的，也是凤毛麟角。
于是，就有了将秦帝国说叨清楚的冲动。
在漫长艰苦的写作中，这种冲动已经慢慢淡了下来，化成一个简单的愿望——将事实展现出来，让人们自己去判断。
虽然如此，还是想将研究与写作过程中形成的一些基本思想大体说说，</string>
    <string name="btn_protocol_agree">同意</string>
    <string name="btn_protocol_disagree">不同意</string>
    <string name="tv_bottom01">Sport</string>
    <string name="tv_bottom02">location</string>
    <string name="tv_bottom03">info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
