<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60sp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_bottom01"
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_bottom01"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/empty"
            android:paddingTop="0dp"
            android:src="@mipmap/ic_bottom01_press" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:text="@string/tv_bottom01"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom02"
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_bottom02"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/empty"
            android:paddingTop="0dp"
            android:src="@mipmap/ic_bottom02_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:text="@string/tv_bottom02"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom03"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_bottom03"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/empty"
            android:paddingTop="0dp"
            android:src="@mipmap/ic_bottom02_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:text="@string/tv_bottom03"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>